# quic-dns

./: Cargo.toml  README.md
.github/workflows/: build.yml  dnspyre.yml  fmt.yml  release.yml
src/: main.rs
