[package]
name = "quic-dns"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0 OR AGPL-3.0"
repository = "https://github.com/pandaninjas/quic-dns"
homepage = "https://github.com/pandaninjas/quic-dns"
description = "DNS to DNS-over-https proxy"
readme = "README.md"
categories = ["network-programming"]
keywords = ["dns", "quic", "quad1", "proxy"]

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
h3 = "0.0.6"
h3-quinn = "0.0.6"
quinn = { version = "0.11.0", features = ["ring"]}
http = "1"
bytes = "1.6.0"
rustls = "0.21"
rustls-native-certs = "0.7"
const_format = "0.2.32"
log = "0.4.21"
fast_log = "1.6.16"
webpki-roots = { version = "0.26.0-alpha.1" }

[profile.release]
codegen-units = 1
lto = "fat"
